--- a/outils/index.html
+++ b/outils/index.html
@@ -75,9 +75,9 @@
       </a>
 
       <!-- ★ NOUVEL OUTIL -->
-      <a class="card" href="bandes_maker_v2.html">
-        <div class="title">Bandes maker v2</div>
-        <p class="desc">Générateur de bandes (fractions) — version 2.</p>
+      <a class="card" href="bandes_maker_v3.html">
+        <div class="title">Bandes maker v3</div>
+        <p class="desc">Générateur de bandes (fractions) — version 3</p>
       </a>
     </section>
 
