--- a/outils/bandes_maker_v3.html
+++ b/outils/bandes_maker_v3.html
@@ -30,6 +30,7 @@
   legend{ padding:0 6px; font-weight:600; }
   
   /* CORRECTION FINALE D'ESPACEMENT/ALIGNEMENT (Compact et uniforme) */
+  /* J'ai réintroduit l'alignement vertical correct en utilisant padding/margin plus standard */
   label{ 
       display:block; 
       font-size:13px; 
@@ -39,6 +40,7 @@
       line-height: 1.2; 
   }
 
+  /* Pour les éléments qui sont côte à côte */
   .row{ display:grid; grid-template-columns:1fr 1fr; gap:8px; }
   .row > div {
       display: flex;
