--- a/outils/index.html
+++ b/outils/index.html
@@ -77,7 +77,7 @@
       <!-- ★ NOUVEL OUTIL -->
       <a class="card" href="bandes_maker_v3.html">
         <div class="title">Bandes maker v3</div>
-        <p class="desc">Générateur de bandes (fractions) — version 3</p>
+        <p class="desc">Générateur de bandes (fractions) — v3</p>
       </a>
     </section>
 
