--- a/outils/index.html
+++ b/outils/index.html
@@ -82,7 +82,7 @@
     </section>
 
     <footer>
-      <p>© 2025 — Bourgault Gwenaël</p>
+      <p>Bourgault Gwenaël</p>
     </footer>
   </main>
 
