--- a/outils/index.html
+++ b/outils/index.html
@@ -79,9 +79,8 @@
         <div class="title">Bandes maker v3</div>
         <p class="desc">Générateur de bandes (fractions) — v3</p>
       </a>
-    </section>
 
-      <a class="card" href="disques_maker.html">
+      <a class="card" href="disque_maker.html">
         <div class="title">Disques maker</div>
         <p class="desc">Générateur de disques (fractions) </p>
       </a>
