--- a/outils/bandes_maker_v2.html
+++ b/outils/bandes_maker_v2.html
@@ -101,7 +101,7 @@
     width: var(--page-w); 
     height: var(--page-h); 
     background:white; 
-    /* Espace minimal entre les pages */
+    /* Rétablit l'espace minimal entre les pages (1mm) */
     margin: 0 0 1mm 0; 
     position: relative; 
     border: 1px dashed #cfd6e3; 
