--- a/outils/index.html
+++ b/outils/index.html
@@ -76,8 +76,8 @@
 
       <!-- ★ NOUVEL OUTIL -->
       <a class="card" href="bandes_maker_v2.html">
-        <div class="title">Bandes maker v3</div>
-        <p class="desc">Générateur de bandes (fractions) — v3</p>
+        <div class="title">Bandes maker</div>
+        <p class="desc">Générateur de bandes (fractions)</p>
       </a>
 
       <a class="card" href="disque_maker.html">
