--- a/outils/disque_maker.html
+++ b/outils/disque_maker.html
@@ -131,7 +131,7 @@
 </head>
 <body>
 <header>
-    <a href="#" id="return-link">← Retour aux Outils</a>
+    <a href="https://bourgault314.github.io/maths/outils/" id="return-link">← Retour aux Outils</a>
     <span>GÉNÉRATEUR PRO — DISQUES DE FRACTIONS | Imprimer en Recto-Verso bord long</span>
     <div></div>
 </header>
@@ -1053,3 +1053,4 @@ window.addEventListener("load", updateUI);
 </script>
 </body>
 </html>
+
