--- a/outils/disque_maker.html
+++ b/outils/disque_maker.html
@@ -132,7 +132,7 @@
 <body>
 <header>
     <a href="https://bourgault314.github.io/maths/outils/" id="return-link">← Retour aux Outils</a>
-    <span>GÉNÉRATEUR PRO — DISQUES DE FRACTIONS | Imprimer en Recto-Verso bord long</span>
+    <span>GÉNÉRATEUR — DISQUES DE FRACTIONS | Imprimer en Recto-Verso bord long</span>
     <div></div>
 </header>
 <main>
@@ -218,7 +218,7 @@
               </div>
               <div>
                 <label>Distance texte/centre (%)</label>
-                <input type="number" id="textDistRatioRecto" step="1" value="60">
+                <input type="number" id="textDistRatioRecto" step="1" value="50">
               </div>
             </div>
             
@@ -302,7 +302,7 @@
               </div>
               <div>
                 <label>Distance texte/centre (%)</label>
-                <input type="number" id="textDistRatioVerso" step="1" value="60">
+                <input type="number" id="textDistRatioVerso" step="1" value="50">
               </div>
             </div>
             
@@ -1053,4 +1053,5 @@ window.addEventListener("load", updateUI);
 </script>
 </body>
 </html>
+
 
